limit RAM usage for Tomcat